--- a/index.html
+++ b/index.html
@@ -31,46 +31,48 @@
     // Jika dah ada, tak perlu apa-apa
     if (window.XLSX) return;
 
-    // Helper umum: muat <script> sekali
-    window.loadScriptOnce = window.loadScriptOnce || (function () {
-      const loaded = new Set();
-      return function loadScriptOnce(url) {
-        return new Promise((resolve, reject) => {
-          if (loaded.has(url)) return resolve();
-          const s = document.createElement('script');
-          s.src = url;
-          s.async = true;
-          s.onload = () => { loaded.add(url); resolve(); };
-          s.onerror = () => reject(new Error('Gagal muat: ' + url));
-          document.head.appendChild(s);
-        });
-      };
-    })();
+    // Helper umum: muat 
+// Helpers: loadScriptOnce & ensureXLSXReady
+window.loadScriptOnce = window.loadScriptOnce || (function () {
+  const loaded = new Set();
+  return function loadScriptOnce(url) {
+    return new Promise((resolve, reject) => {
+      if (loaded.has(url)) return resolve();
+      const s = document.createElement('script');
+      s.src = url;
+      s.async = true;
+      s.onload = () => { loaded.add(url); resolve(); };
+      s.onerror = () => reject(new Error('Gagal muat: ' + url));
+      document.head.appendChild(s);
+    });
+  };
+})();
 
-    // Override/definisi semula: pastikan XLSX wujud, cuba 3 CDN
-    window.ensureXLSXReady = async function ensureXLSXReady() {
-      if (window.XLSX) return;
-      const cdns = [
-        'https://cdn.jsdelivr.net/npm/xlsx@0.19.3/dist/xlsx.full.min.js',
-        'https://unpkg.com/xlsx@0.19.3/dist/xlsx.full.min.js',
-        'https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js'
-      ];
-      let lastErr;
-      for (const url of cdns) {
-        try {
-          await window.loadScriptOnce(url);
-          if (window.XLSX) {
-            console.log('[XLSX] Loaded from', url);
-            return;
-          }
-        } catch (e) {
-          lastErr = e;
+window.ensureXLSXReady = window.ensureXLSXReady || (function(){
+  const cdns = [
+    'https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js',
+    'https://unpkg.com/xlsx@0.18.5/dist/xlsx.full.min.js'
+  ];
+  return async function ensureXLSXReady(){
+    if (window.XLSX) return;
+    let lastErr = null;
+    for (const url of cdns) {
+      try {
+        await window.loadScriptOnce(url);
+        if (window.XLSX) {
+          console.log('[XLSX] Loaded from', url);
+          return;
         }
+      } catch (e) {
+        lastErr = e;
       }
-      console.error('[XLSX] Gagal dimuat dari semua CDN.', lastErr || '');
-      throw new Error('XLSX gagal dimuat.');
-    };
-  })();
+    }
+    console.error('[XLSX] Gagal dimuat dari semua CDN.', lastErr || '');
+    throw new Error('XLSX gagal dimuat.');
+  };
+})();
+
+})();
 </script>
 
   <!-- Google Identity Services (Sign-In) -->
@@ -990,18 +992,22 @@
   }
 
   // ---------- File readers ----------
+// ---------- File readers ----------
   const readAsArrayBuffer = (file) => new Promise((res, rej) => {
     const fr = new FileReader();
-    fr.onload = e => res(e.target.result);
+    fr.onload = e => res(e.target.rget.result);
     fr.onerror = rej;
     fr.readAsArrayBuffer(file);
   });
+
   const readAsText = (file) => new Promise((res, rej) => {
     const fr = new FileReader();
-    fr.onload = e => res(e.target.result);
+    fr.onload = e => res(e.target.rget.result);
     fr.onerror = rej;
     fr.readAsText(file, 'utf-8');
   });
+
+
 
   // ---------- CSV helpers ----------
   const stripBOM = (s) => s && s.charCodeAt(0) === 0xFEFF ? s.slice(1) : s;
@@ -1403,12 +1409,12 @@ let MONITOR_LOADING = false;
 
   // ---------- Events ----------
   fileInput.addEventListener('change', e => {
-    const f = e.target.files && e.target.files[0];
+    const f = e.target.rget.files && e.target.rget.files[0];
     if (f) handleFile(f);
   });
 
   tableBody.addEventListener('click', e => {
-    const btn = e.target.closest('.daftar-row');
+    const btn = e.target.rget.closest('.daftar-row');
     if (!btn) return;
     const tr  = btn.closest('tr');
     const idx = Number(tr.dataset.idx);
@@ -2053,7 +2059,7 @@ async function setupExcel(){
   const tbody = document.getElementById('kelayakanTable');
 
   input.addEventListenerasync ('change', async (e)=>{
-    const file = e.target.files[0];
+    const file = e.target.rget.files[0];
     if (!file) return;
 
     const name = (file.name || '').toLowerCase();
@@ -3111,6 +3117,9 @@ async function pullNadiLiveOnce(){
       mergeLiveRowsIntoUI(items);
     }
 
+  } catch(e) { /* senyap */ }
+
+
 // Gabung rekod masuk ke UI (tanpa kacau input sedang fokus)
 function mergeLiveRowsIntoUI(items){
   const byId = (id)=> document.querySelector(`#nadiContainer .nadi-row[data-row-id="${id}"]`)
@@ -3874,6 +3883,8 @@ function activateFromHash(){
   const link = document.querySelector(`.nav-link[href="${hash}"]`);
   if (link){ link.click(); }
 }
+
+})();
 </script>
 
   <script>
@@ -4095,7 +4106,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || saveNadiStateDe
 
   // Toggle enable/disable tarikh voucher ikut checkbox
   document.addEventListener('change', function(e){
-    const el = e.target;
+    const el = e.target.rget;
     if (el && el.name === 'voucher') {
       const tr = el.closest('tr');
       const dateInput = tr?.querySelector('input[name="voucherDate"]');
@@ -4111,7 +4122,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || saveNadiStateDe
   }, true);
 
   document.addEventListener('input', function(e){
-    const el = e.target;
+    const el = e.target.rget;
     if (el && el.closest('#nadiContainer')) saveNadiStateDebounced();
   }, true);
 
@@ -4124,7 +4135,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || saveNadiStateDe
 
   // Intercept Simpan Aktiviti: proses baris voucher → daftar sebagai TCA CALL (remark "Saringan kesihatan voucher")
   document.addEventListener('click', async (e)=>{
-    const btn = e.target.closest('#btnNadiSaveActivity');
+    const btn = e.target.rget.closest('#btnNadiSaveActivity');
     if (!btn) return;
     // Kumpul baris voucher
     const programDate = document.getElementById('nadiProgramDate')?.value || '';
@@ -4271,20 +4282,20 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || saveNadiStateDe
   }
 
   document.addEventListener('click', (e)=>{
-    const btn = e.target.closest('#btnSejarahReload');
+    const btn = e.target.rget.closest('#btnSejarahReload');
     if (btn) loadPrograms();
-    const item = e.target.closest('#programList .list-group-item');
+    const item = e.target.rget.closest('#programList .list-group-item');
     if (item) loadProgramDetail(item.getAttribute('data-activity-id'));
   });
   document.addEventListener('input', (e)=>{
-    if (e.target && e.target.id==='programFilter'){
-      const q = e.target.value.toLowerCase();
+    if (e.target.rget && e.target.rget.id==='programFilter'){
+      const q = e.target.rget.value.toLowerCase();
       document.querySelectorAll('#programList .list-group-item').forEach(b=>{
         const meta = b.getAttribute('data-meta') || '';
         b.style.display = meta.includes(q) ? '' : 'none';
       });
     }
-    if (e.target && e.target.id==='sejarahSearch'){
+    if (e.target.rget && e.target.rget.id==='sejarahSearch'){
       const current = document.querySelector('#programList .list-group-item.active') || document.querySelector('#programList .list-group-item');
       if (current) loadProgramDetail(current.getAttribute('data-activity-id'));
     }
@@ -4305,7 +4316,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || saveNadiStateDe
   const container = document.getElementById('nadiContainer');
   if (!container) return;
   container.addEventListener('change', function(e){
-    const el = e.target;
+    const el = e.target.rget;
     if (!el.classList.contains('nadi-voucher')) return;
     const row = el.closest('tr');
     const btn = row?.querySelector('.nadi-daftar');
@@ -4322,7 +4333,7 @@ window.saveNadiStateDebounced = window.saveNadiStateDebounced || saveNadiStateDe
   if (!cont) return;
   function setEnabled(el, on){ if (el) { el.disabled = !on; } }
   cont.addEventListener('change', function(e){
-    const t = e.target;
+    const t = e.target.rget;
     if (!t.closest('tr')) return;
     if (!(t.classList.contains('nadi-layak') || t.classList.contains('nadi-taklayak') || t.classList.contains('nadi-voucher'))) return;
     const row = t.closest('tr');
@@ -4423,15 +4434,15 @@ if (btn) {
     if (el.classList.contains('nadi-bmi')) return applyIndicator(view,'bmi', el.value);
   }
 
-  cont.addEventListener('blur', (e)=>{ if (e.target && e.target.tagName==='INPUT') handle(e.target); }, true);
+  cont.addEventListener('blur', (e)=>{ if (e.target.rget && e.target.rget.tagName==='INPUT') handle(e.target.rget); }, true);
   cont.addEventListener('input', (e)=>{
-    if (!e.target || e.target.tagName!=='INPUT') return;
-    if (e.target.classList.contains('nadi-dxt')) handle(e.target);
+    if (!e.target.rget || e.target.rget.tagName!=='INPUT') return;
+    if (e.target.rget.classList.contains('nadi-dxt')) handle(e.target.rget);
   }, true);
 
   // Also recolor when DXT type changes (dropdown menu)
   document.addEventListener('click', (e)=>{
-    const item = e.target.closest('.dropdown-menu .dropdown-item');
+    const item = e.target.rget.closest('.dropdown-menu .dropdown-item');
     if (!item) return;
     const menu = item.closest('.dropdown-menu');
     const row = item.closest('tr');
@@ -4460,7 +4471,7 @@ if (btn) {
 (function(){
   // Enable button & relabel when voucher toggled
   document.addEventListener('change', function(e){
-    const el = e.target;
+    const el = e.target.rget;
     if (!el || el.tagName !== 'INPUT') return;
     if (!el.closest('#nadiContainer')) return;
     if (!(el.matches('input[name="voucher"]') || el.classList.contains('nadi-voucher'))) return;
@@ -4480,7 +4491,7 @@ if (btn) {
 
   // Intercept click to perform voucher registration with fallback date
   document.addEventListener('click', async function(e){
-    const btn = e.target && e.target.closest('.nadi-daftar');
+    const btn = e.target.rget && e.target.rget.closest('.nadi-daftar');
     if (!btn) return;
     const row = btn.closest('tr');
     const vchr = row && (row.querySelector('input[name="voucher"]') || row.querySelector('.nadi-voucher'));
