--- a/index.html
+++ b/index.html
@@ -779,6 +779,7 @@
   </div>
 
   <div id="monitorInfo" class="text-muted mb-2"></div>
+  <div id="monitorAllContainer"></div>
   <div id="monitorCards" class="row g-3"></div>
 </section>
 
@@ -1119,184 +1120,204 @@
     };
   }
 // === KONFIG & UTIL ===
-/* === MONITOR VIEW === */
-(async () => {
-  const POLL_MS = 7000; // refresh setiap 7s
-  let monitorTimer = null;
+const POLL_MS = 7000; // refresh setiap 7s
+let monitorTimer = null;
 
-  function showPage(id){
-    document.querySelectorAll('.page').forEach(p=> p.style.display='none');
-    const el = document.getElementById(id);
-    if (el) el.style.display = '';
-  }
+function showPage(id){
+  // sembunyikan semua .page, tunjuk satu
+  document.querySelectorAll('.page').forEach(p=> p.style.display='none');
+  const el = document.getElementById(id);
+  if (el) el.style.display = '';
+}
 
-  function todayIso(){
-    const d=new Date();
-    const mm=('0'+(d.getMonth()+1)).slice(-2);
-    const dd=('0'+d.getDate()).slice(-2);
-    return d.getFullYear()+'-'+mm+'-'+dd;
-  }
+function todayIso(){
+  const d=new Date();
+  const mm=('0'+(d.getMonth()+1)).slice(-2);
+  const dd=('0'+d.getDate()).slice(-2);
+  return d.getFullYear()+'-'+mm+'-'+dd;
+}
 
-  async function showMonitorAll(){
-    showPage('monitorAllSection');
-    const dateInput = document.getElementById('monitorDate');
-    if (!dateInput.value) dateInput.value = todayIso();
-    await loadMonitor(); // first load
-    startMonitorPolling();
-  }
+// === MONITOR VIEW ===
+async function showMonitorAll(){
+  showPage('monitorAllSection');
+  const dateInput = document.getElementById('monitorDate');
+  if (!dateInput.value) dateInput.value = todayIso();
+  await loadMonitor(); // first load
+  startMonitorPolling();
+}
 
-  function startMonitorPolling(){
-    stopMonitorPolling();
-    monitorTimer = setInterval(loadMonitor, POLL_MS);
-  }
-  function stopMonitorPolling(){
-    if (monitorTimer) { clearInterval(monitorTimer); monitorTimer=null; }
-  }
-  async function refreshMonitorNow(){
-    await loadMonitor(true);
-  }
+function startMonitorPolling(){
+  stopMonitorPolling();
+  monitorTimer = setInterval(loadMonitor, POLL_MS);
+}
+function stopMonitorPolling(){
+  if (monitorTimer) { clearInterval(monitorTimer); monitorTimer=null; }
+}
+async function refreshMonitorNow(){
+  await loadMonitor();
+}
 
-  async function loadMonitor(dateStr) {
-    const container = document.getElementById('monitorAllContainer');
-    if (!container) return;
+async function loadMonitor(dateStr) {
+  const container = document.getElementById('monitorAllContainer');
+  if (!container) return;
 
-    const chosen = (dateStr || document.getElementById('monitorDate')?.value || '').trim();
+  // Tarikh dari input jika tidak diberi
+  const chosen = (dateStr || document.getElementById('monitorDate')?.value || '').trim();
 
-    container.innerHTML = `
-      <div class="text-muted small mb-2">Memuat data monitor…</div>
-      <div class="row g-2">
-        <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
-          <div class="placeholder col-8 mb-2"></div>
-          <div class="placeholder col-6"></div>
-        </div></div></div>
-        <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
-          <div class="placeholder col-8 mb-2"></div>
-          <div class="placeholder col-6"></div>
-        </div></div></div>
-        <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
-          <div class="placeholder col-8 mb-2"></div>
-          <div class="placeholder col-6"></div>
-        </div></div></div>
-      </div>`;
+  // Papar skeleton sementara
+  container.innerHTML = `
+    <div class="text-muted small mb-2">Memuat data monitor…</div>
+    <div class="row g-2">
+      <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
+        <div class="placeholder col-8 mb-2"></div>
+        <div class="placeholder col-6"></div>
+      </div></div></div>
+      <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
+        <div class="placeholder col-8 mb-2"></div>
+        <div class="placeholder col-6"></div>
+      </div></div></div>
+      <div class="col-12 col-md-4"><div class="card placeholder-wave"><div class="card-body">
+        <div class="placeholder col-8 mb-2"></div>
+        <div class="placeholder col-6"></div>
+      </div></div></div>
+    </div>`;
 
-    async function fetchJSON(url) {
-      const res = await fetch(url, { method: 'GET', credentials: 'omit' });
-      const text = await res.text();
-      let json;
-      try {
-        json = JSON.parse(text);
-      } catch (e) {
-        throw new Error('Respons bukan JSON sah daripada pelayan (mungkinkah URL/token salah?).');
-      }
-      return json;
-    }
-
-    const qs = new URLSearchParams();
-    qs.set('action', 'getNadiMonitor');
-    if (chosen) qs.set('date', chosen);
-    if (typeof ID_TOKEN === 'string' && ID_TOKEN) qs.set('id_token', ID_TOKEN);
-
+  // Util kecil: pembantu fetch + parse JSON dengan mesej ralat yang jelas
+  async function fetchJSON(url) {
+    const res = await fetch(url, { method: 'GET', credentials: 'omit' });
+    const text = await res.text();
     let json;
     try {
-      json = await fetchJSON(`${SCRIPT_URL}?${qs.toString()}`);
-    } catch (err) {
-      container.innerHTML = `
-        <div class="alert alert-danger">
-          <div class="fw-bold mb-1">Gagal memuat monitor</div>
-          <div>${err.message || err}</div>
-          <div class="small text-muted mt-1">Semak semula <code>SCRIPT_URL</code>, <code>ID_TOKEN</code>, dan capaian internet.</div>
-        </div>`;
-      if (typeof toast === 'function') toast('Ralat', 'Gagal memuat monitor', 'danger');
-      return;
+      json = JSON.parse(text);
+    } catch (e) {
+      // Jika HTML (<!DOCTYPE …) -> biasanya URL silap / token tak dihantar
+      throw new Error('Respons bukan JSON sah daripada pelayan (mungkinkah URL/token salah?).');
     }
+    return json;
+  }
 
-    if (!json || json.status !== 'success') {
-      const msg = (json && (json.message || json.code)) || 'Action tidak sah / akses ditolak';
-      container.innerHTML = `
-        <div class="alert alert-warning">
-          <div class="fw-bold mb-1">Tidak dapat memuat data monitor</div>
-          <div>${msg}</div>
-          <div class="small text-muted mt-1">Pastikan anda telah sign-in dan akaun berada dalam allowlist.</div>
-        </div>`;
-      if (typeof toast === 'function') toast('Makluman', String(msg), 'warning');
-      return;
+  // Bina URL
+  const qs = new URLSearchParams();
+  qs.set('action', 'getNadiMonitor');
+  if (chosen) qs.set('date', chosen); // sokong "yyyy-MM-dd" atau "dd/MM/yyyy"
+  if (typeof ID_TOKEN === 'string' && ID_TOKEN) qs.set('id_token', ID_TOKEN);
+
+  // Muat data
+  let json;
+  try {
+    const base = (typeof window.SCRIPT_URL === "string" && window.SCRIPT_URL) ? window.SCRIPT_URL : "";
+    if (!base) {
+      throw new Error("SCRIPT_URL tidak ditetapkan.");
     }
+    json = await fetchJSON(`${base}?${qs.toString()}`);
+  } catch (err) {
+    container.innerHTML = `
+      <div class="alert alert-danger">
+        <div class="fw-bold mb-1">Gagal memuat monitor</div>
+        <div>${err.message || err}</div>
+        <div class="small text-muted mt-1">Semak semula <code>SCRIPT_URL</code>, <code>ID_TOKEN</code>, dan capaian internet.</div>
+      </div>`;
+    if (typeof toast === 'function') toast('Ralat', 'Gagal memuat monitor', 'danger');
+    return;
+  }
 
-    const monitorDate = json.date || chosen || '';
-    const items = Array.isArray(json.data) ? json.data : [];
+  // Semak status
+  if (!json || json.status !== 'success') {
+    const msg = (json && (json.message || json.code)) || 'Action tidak sah / akses ditolak';
+    container.innerHTML = `
+      <div class="alert alert-warning">
+        <div class="fw-bold mb-1">Tidak dapat memuat data monitor</div>
+        <div>${msg}</div>
+        <div class="small text-muted mt-1">Pastikan anda telah sign-in dan akaun berada dalam allowlist.</div>
+      </div>`;
+    if (typeof toast === 'function') toast('Makluman', String(msg), 'warning');
+    return;
+  }
 
-    if (!items.length) {
-      container.innerHTML = `
-        <div class="text-center text-muted py-4">
-          Tiada sesi ditemui untuk tarikh <span class="fw-semibold">${monitorDate || '(tidak ditentukan)'}</span>.
-        </div>`;
-      return;
-    }
+  // Bentuk data: { status:'success', date:'dd/MM/yyyy', data:[{activityId,title,programDate,counts:{layak,takLayak,total}}] }
+  const monitorDate = json.date || chosen || '';
+  const items = Array.isArray(json.data) ? json.data : [];
 
-    const now = new Date();
-    const rendered = items.map((s) => {
-      const layak = Number(s?.counts?.layak || 0);
-      const tak = Number(s?.counts?.takLayak || 0);
-      const tot = Number(s?.counts?.total || (layak + tak));
-      const barLayak = Math.round(tot ? (layak / tot) * 100 : 0);
-      const barTak = Math.max(0, 100 - barLayak);
+  // Jika tiada sesi pada tarikh dipilih
+  if (!items.length) {
+    container.innerHTML = `
+      <div class="text-center text-muted py-4">
+        Tiada sesi ditemui untuk tarikh <span class="fw-semibold">${monitorDate || '(tidak ditentukan)'}</span>.
+      </div>`;
+    return;
+  }
 
-      return `
-        <div class="col-12 col-md-6 col-lg-4">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-start mb-2">
-                <div>
-                  <div class="fw-bold">${s.title || 'Tanpa Tajuk'}</div>
-                  <div class="text-muted small">${s.programDate || monitorDate}</div>
-                </div>
-                <span class="badge bg-secondary">ID: ${s.activityId || '-'}</span>
+  // Render kad ringkasan setiap sesi
+  const now = new Date();
+  const rendered = items.map((s) => {
+    const layak = Number(s?.counts?.layak || 0);
+    const tak = Number(s?.counts?.takLayak || 0);
+    const tot = Number(s?.counts?.total || (layak + tak));
+
+    // Pilih warna ringkas ikut status (hanya kosmetik)
+    const barLayak = Math.round(tot ? (layak / tot) * 100 : 0);
+    const barTak = Math.max(0, 100 - barLayak);
+
+    return `
+      <div class="col-12 col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-start mb-2">
+              <div>
+                <div class="fw-bold">${s.title || 'Tanpa Tajuk'}</div>
+                <div class="text-muted small">${s.programDate || monitorDate}</div>
               </div>
+              <span class="badge bg-secondary">ID: ${s.activityId || '-'}</span>
+            </div>
 
-              <div class="mb-2">
-                <div class="d-flex justify-content-between small text-muted">
-                  <span>Layak</span><span>${layak}</span>
-                </div>
-                <div class="progress" role="progressbar" aria-label="Layak vs Tidak Layak">
-                  <div class="progress-bar" style="width:${barLayak}%"></div>
-                  <div class="progress-bar bg-danger" style="width:${barTak}%"></div>
-                </div>
+            <div class="mb-2">
+              <div class="d-flex justify-content-between small text-muted">
+                <span>Layak</span><span>${layak}</span>
               </div>
-
-              <div class="d-flex gap-2 mt-3">
-                <span class="badge bg-success">Layak: ${layak}</span>
-                <span class="badge bg-danger">Tidak Layak: ${tak}</span>
-                <span class="badge bg-primary">Jumlah: ${tot}</span>
+              <div class="progress" role="progressbar" aria-label="Layak vs Tidak Layak">
+                <div class="progress-bar" style="width:${barLayak}%"></div>
+                <div class="progress-bar bg-danger" style="width:${barTak}%"></div>
               </div>
             </div>
+
+            <div class="d-flex gap-2 mt-3">
+              <span class="badge bg-success">Layak: ${layak}</span>
+              <span class="badge bg-danger">Tidak Layak: ${tak}</span>
+              <span class="badge bg-primary">Jumlah: ${tot}</span>
+            </div>
           </div>
-        </div>`;
-    }).join('');
-
-    container.innerHTML = `
-      <div class="d-flex justify-content-between align-items-center mb-2">
-        <div class="small text-muted">
-          Tarikh dipantau: <span class="fw-semibold">${monitorDate || '(tidak ditentukan)'}</span>
         </div>
-        <div class="small text-muted">Dikemas kini: ${now.toLocaleTimeString()}</div>
+      </div>`;
+  }).join('');
+
+  container.innerHTML = `
+    <div class="d-flex justify-content-between align-items-center mb-2">
+      <div class="small text-muted">
+        Tarikh dipantau: <span class="fw-semibold">${monitorDate || '(tidak ditentukan)'}</span>
       </div>
-      <div class="row g-2">${rendered}</div>
-    `;
-  }
+      <div class="small text-muted">Dikemas kini: ${now.toLocaleTimeString()}</div>
+    </div>
+    <div class="row g-2">${rendered}</div>
+  `;
+}
 
-  function openSessionDetail(activityId){
-    location.hash = '#nadi?activityId='+encodeURIComponent(activityId);
-  }
+function openSessionDetail(activityId){
+  location.hash = '#nadi?activityId='+encodeURIComponent(activityId);
+}
 
-  window.addEventListener('hashchange', ()=>{
-    const onMonitor = location.hash.includes('#monitor');
-    if (!onMonitor) stopMonitorPolling();
-  });
+// ❌ PADAMKAN fungsi duplikasi ini kalau ada:
+// function escapeHtml(s){ ... }
 
-  // expose ke global
-  window.showMonitorAll = showMonitorAll;
-  window.refreshMonitorNow = refreshMonitorNow;
-})();
+// Henti polling bila keluar dari skrin monitor
+window.addEventListener('hashchange', ()=>{
+  const onMonitor = location.hash.includes('#monitor');
+  if (!onMonitor) stopMonitorPolling();
+});
+
+// ✅ EXPOSE ke global (penting untuk onclick & button)
+window.showMonitorAll = showMonitorAll;
+window.refreshMonitorNow = refreshMonitorNow;
+window.stopMonitorPolling = stopMonitorPolling;
 // 1) Helper fetch dengan timeout (abort)
 async function fetchWithTimeout(url, opt={}, ms=15000){
   const ctl = new AbortController();
@@ -4007,10 +4028,6 @@ startNadiLiveSync?.();               // akan panggil pullNadiLiveOnce() awal
     });
     localStorage.setItem(NADI_KEY, JSON.stringify(rows));
   }
-function saveNadiStateDebounced(){
-  clearTimeout(window.__saveNadiT);
-  window.__saveNadiT = setTimeout(saveNadiState, 400);
-}
 
   const saveNadiStateDebounced = debounce(saveNadiState, 400);
 
